--- a/golang/src/github.com/itsoflife/webapp-samples/webapp050/template/layout/base.tmpl
+++ b/golang/src/github.com/itsoflife/webapp-samples/webapp050/template/layout/base.tmpl
@@ -25,27 +25,44 @@ NOTE: NO space between {{ and /* for comments.
 </head>
 
 <body>
-  <div class="main">
+  <!-- Sidebar (hidden by default) -->
+  <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+    <a href="javascript:void(0)" onclick="w3_close()"
+                                 class="w3-bar-item w3-button">Close Menu</a>
+    <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
+    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  </nav>
 
-  {{ block "content" . -}}
-    Default content if content not defined.
-  {{- end }}
+<!-- Top menu -->
+<div class="w3-top">
+  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+    <div class="w3-right w3-padding-16">itsoflife</div>
+    <div class="w3-center w3-padding-16">golang webapp</div>
+  </div>
+</div>
 
-  <footer>
-    {{ block "footer" . -}}
-      Default footer if footer not defined.
+<!-- !PAGE CONTENT! -->
+<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
+
+    {{ block "content" . -}}
+      Default content if content not defined.
     {{- end }}
 
-  </footer>
+    <footer>
+      {{ block "footer" . -}}
+        Default footer if footer not defined.
+      {{- end }}
 
-  {{/* Use `template` action if there is no default content */}}
-  {{/* app level js declarations */}}
-  {{ template "appjs" . }}
-  {{/* page specific javascript */}}
-  {{ block "pagejs" . -}} {{- end }}
+    </footer>
 
   </div>
-</body>
 
+    {{/* Use `template` action if there is no default content */}}
+    {{/* app level js declarations */}}
+    {{ template "appjs" . }}
+    {{/* page specific javascript */}}
+    {{ block "pagejs" . -}} {{- end }}
+</body>
 </html>
 {{- end }}
