--- a/golang/src/github.com/itsoflife/webapp-samples/webapp050/template/layout/style.tmpl
+++ b/golang/src/github.com/itsoflife/webapp-samples/webapp050/template/layout/style.tmpl
@@ -4,6 +4,8 @@
 
 <style>
   {{/* avoid declarations here */}}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+.w3-bar-block .w3-bar-item {padding:20px}
 </style>
 
 {{ end }}
