--- a/golang/src/github.com/itsoflife/webapp-samples/webapp050/template/layout/base.tmpl
+++ b/golang/src/github.com/itsoflife/webapp-samples/webapp050/template/layout/base.tmpl
@@ -1,22 +1,21 @@
 {{/*
-The base template giving structure to all the pages
-in the app.
-NOTE: NO space between {{ and /* for comments.
+The base template gives structure to all the pages.
+NOTE: No space between {{ and /* for comments.
 */}}
 {{ define "base" -}}
 
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/static/image/myfavicon.ico" type="image/x-icon" />
   <meta name="description" content="Go templates">
   <meta name="keywords" content="golang, html, template, html5">
   <meta name="author" content="Deven Ray">
 
-  <title>{{ block "title" . -}} Web Page {{- end }}</title>
+  <title>{{ block "title" . -}}Web Page{{- end }}</title>
 
   {{/* app specific style settings */}}
   {{ block "appstyle" . -}} {{- end }}
@@ -26,7 +25,7 @@ NOTE: NO space between {{ and /* for comments.
 
 <body>
   <!-- Sidebar (hidden by default) -->
-  <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+  <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-large w3-animate-left" style="display:none;z-index:2;width:25%;min-width:300px" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()"
                                  class="w3-bar-item w3-button">Close Menu</a>
     <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
@@ -37,32 +36,33 @@ NOTE: NO space between {{ and /* for comments.
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16">itsoflife</div>
+    <div class="w3-right w3-padding-16"><span class="w3-blue">its</span><span class="w3-green">of</span><span class="w3-red">life</span></div>
     <div class="w3-center w3-padding-16">golang webapp</div>
   </div>
 </div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
+<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px" onclick="w3_close();">
 
     {{ block "content" . -}}
       Default content if content not defined.
     {{- end }}
 
     <footer>
-      {{ block "footer" . -}}
-        Default footer if footer not defined.
-      {{- end }}
+      {{ block "footer" . -}}{{- end }}
 
+      <div class="w3-center w3-padding-32">
+        &copy; <span class="w3-blue">its</span><span class="w3-green">of</span><span class="w3-red">life</span>
+      </div>
     </footer>
 
-  </div>
+</div>
 
-    {{/* Use `template` action if there is no default content */}}
-    {{/* app level js declarations */}}
-    {{ template "appjs" . }}
-    {{/* page specific javascript */}}
-    {{ block "pagejs" . -}} {{- end }}
-</body>
+{{/* Use `template` action if there is no default content */}}
+{{/* app level js declarations */}}
+{{ template "appjs" . }}
+{{/* page specific javascript */}}
+{{ block "pagejs" . -}} {{- end }}
+  </body>
 </html>
 {{- end }}
