--- a/python/mysite/polls/templates/polls/index.html
+++ b/python/mysite/polls/templates/polls/index.html
@@ -1,27 +1,24 @@
-{% load static %}
+{% extends "main/base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Polls Index</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-</head>
-<body>
-{% if latest_question_list %}
-  <ul>
-  {% for question in latest_question_list %}
-    <!-- <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li> -->
-    <!-- Avoiding hard coded urls -->
-    <li>
-      <a href="{%  url 'polls:detail' question.id %}">
-        {{ question.question_text }}
-      </a>
-    </li>
-  {% endfor %}
-  </ul>
-{% else %}
+{#  {% load static %} ?? #}
+
+{% block title %}Polls Index{% endblock %}
+
+{% block content %}
+  {% if latest_question_list %}
+    <ul>
+      {% for question in latest_question_list %}
+        <!-- <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li> -->
+        <!-- Avoiding hard coded urls -->
+        <li>
+          <a href="{%  url 'polls:detail' question.id %}">
+            {{ question.question_text }}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
     <p>No polls are available.</p>
-{% endif %}
-</body>
-</html>
+  {% endif %}
+{% endblock content %}
+
