--- a/python/mysite/polls/templates/polls/results.html
+++ b/python/mysite/polls/templates/polls/results.html
@@ -1,19 +1,17 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Question {{ question.id }}</title>
-</head>
-<body>
+{% extends "main/base.html" %}
 
-<h1>{{ question.question_text }}</h1>
+{% block title %}MySite Question {{ question.id }}{% endblock %}
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
+{% block content %}
+  <h1>{{ question.question_text }}</h1>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+  <ul>
+    {% for choice in question.choice_set.all %}
+      <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+    {% endfor %}
+  </ul>
 
-</body>
-</html>
+  <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+
+{% endblock content %}
+
