--- a/python/mysite/snippets/templates/snippets/visit_count.html
+++ b/python/mysite/snippets/templates/snippets/visit_count.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Visit Count</title>
-</head>
-<body>
+{% extends "main/base.html" %}
 
-<h2>
-  You have visited {{ visitCount }} time{{ visitCount|pluralize }}.
-</h2>
+{% block title %}MySite VisitCount{% endblock %}
 
-</body>
-</html>
+{% block content %}
+  <h2>
+    You have visited {{ visitCount }} time{{ visitCount|pluralize }}.
+  </h2>
+{% endblock %}
