+template inheritance, display request data

--- a/python/mysite/snippets/templates/snippets/index.html
+++ b/python/mysite/snippets/templates/snippets/index.html
@@ -10,5 +10,6 @@
     <li><a href="{% url 'snippets:jsonget' %}">Get A Sample Json Object</a></li>
     <li><a href="{% url 'snippets:jsonset' %}">Post A Sample Json Object</a></li>
     <li><a href="{% url 'snippets:protectFile' "delit.txt" %}">Access a protected file.</a></li>
+    <li><a href="{% url 'snippets:displayRequest' %}">Display the request data.</a></li>
   </ul>
 {% endblock %}
