--- a/python/mysite/main/templates/main/base.html
+++ b/python/mysite/main/templates/main/base.html
@@ -4,11 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/static/main/w3.css">
+<link rel="stylesheet" href="/static/main/mysite.css">
 <link rel='stylesheet' href='/static/main/fonts/font-roboto.css'>
 <link rel="stylesheet" href="/static/main/fonts/font-awesome.min.css">
 <style>
   html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
+<script src="/static/main/w3.js"></script>
+<script src="/static/main/mysite.js"></script>
+
 <body class="w3-light-grey">
 
 <!-- Page Container -->
@@ -72,7 +76,7 @@
           <br>
         </div>
       </div><br>
-    {% endblock %}
+    {% endblock sidecontent %}
 
       <!-- End Left Column -->
     </div>
@@ -80,7 +84,7 @@
     <!-- Right Column -->
     <div class="w3-twothird">
 
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
+      <div class="w3-container w3-card w3-white w3-margin-bottom w3-padding">
         {% block content %}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
