added error pages

--- a/python/mysite/main/templates/main/base.html
+++ b/python/mysite/main/templates/main/base.html
@@ -15,6 +15,8 @@
 
 <body class="w3-light-grey">
 
+{% block page %}
+
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
@@ -136,6 +138,8 @@
 
   <!-- End Page Container -->
 </div>
+
+{% endblock page %}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
