--- a/python/mysite/main/templates/main/index.html
+++ b/python/mysite/main/templates/main/index.html
@@ -17,4 +17,4 @@
       <li><a href="/static/main/templates/cv/index.html">CV Template</a></li>
     </ul>
   </p>
-{% endblock %}
+{% endblock content %}
