--- a/python/mysite/main/templates/main/base.html
+++ b/python/mysite/main/templates/main/base.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>{% block title %}MySite{% endblock %}</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/static/main/w3.css">
-<link rel="stylesheet" href="/static/main/mysite.css">
-<link rel='stylesheet' href='/static/main/fonts/font-roboto.css'>
-<link rel="stylesheet" href="/static/main/fonts/font-awesome.min.css">
-<style>
-  html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-</style>
-<script src="/static/main/w3.js"></script>
-<script src="/static/main/mysite.js"></script>
+<head>
+  <title>{% block title %}MySite{% endblock %}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="/static/main/w3.css">
+  <link rel="stylesheet" href="/static/main/mysite.css">
+  <link rel='stylesheet' href='/static/main/fonts/font-roboto.css'>
+  <link rel="stylesheet" href="/static/main/fonts/font-awesome.min.css">
+  <style>
+    html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+  </style>
+  {% block style %}{% endblock style %}
+
+  <script src="/static/main/w3.js"></script>
+  <script src="/static/main/mysite.js"></script>
+  {% block script %}{% endblock script %}
+</head>
 
 <body class="w3-light-grey">
-
 {% block page %}
 
 <!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
+<div style="max-width:1400px;">
+<div class="w3-content w3-margin-top">
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -136,11 +142,12 @@
     <!-- End Grid -->
   </div>
 
+</div>
   <!-- End Page Container -->
 </div>
-
 {% endblock page %}
 
+{% block footer %}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -151,6 +158,7 @@
   <i class="fa fa-linkedin w3-hover-opacity"></i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
-
+{% endblock footer %}
 </body>
 </html>
+
