semi-automated-update

--- a/python/mysite/main/templates/main/base.html
+++ b/python/mysite/main/templates/main/base.html
@@ -23,8 +23,7 @@
 {% block page %}
 
 <!-- Page Container -->
-<div style="max-width:1400px;">
-<div class="w3-content w3-margin-top">
+<div class="w3-content w3-margin-top" style="max-width:1400px;">
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -144,7 +143,6 @@
 
 </div>
   <!-- End Page Container -->
-</div>
 {% endblock page %}
 
 {% block footer %}
